--- a/src/app/application/application-dashboard/application-dashboard.component.less
+++ b/src/app/application/application-dashboard/application-dashboard.component.less
@@ -351,3 +351,12 @@
 .padd-label {
 	padding:0 16px !important;
 }
+.application-lastrun-inprogress {
+	border-left-color: #0b92ee;
+}
+.application-lastrun-success {
+	border-left-color:  #b1d38b;
+}
+.application-lastrun-fail {
+	border-left-color: #dc372e;
+}
