--- a/src/app/application/deployment-verification/deployment-verification.component.html
+++ b/src/app/application/deployment-verification/deployment-verification.component.html
@@ -1,10 +1,10 @@
 <div *ngIf="!deployementLoading" class="main_content p-0 bg-white">
   <div class="d-flex">
     <div class="leftBox bg-white mw-250">
-      <div class="leftBox_header text-muted text-center">
+      <div class="leftBox_body text-muted text-center">
         <form [formGroup]="applicationForm" novalidate class="example-form">
           <mat-form-field>
-            <input type="text" matInput placeholder="Application Name" formControlName="application" [matAutocomplete]="autoApplication" 
+            <input type="text" matInput placeholder="Select Application" floatLabel="always" formControlName="application" [matAutocomplete]="autoApplication" 
             />
             <mat-autocomplete (optionSelected)="onSelectionChangeApplication($event.option.value)" autoActiveFirstOption #autoApplication="matAutocomplete" >
               <mat-option *ngFor="let applications of applicationListOptions | async" [value]="applications.applicationName">
@@ -14,12 +14,12 @@
           </mat-form-field>
         </form>
     
-        <span>{{selectedApplicationName}}  
+        <div class="appName"><b>{{selectedApplicationName}}</b>  
           <!-- <button type="button" class="btn p-0" >
             <a href="#" class="ml-2" [ngClass]= "{'ci_check':deploymentApplicationHealth['applicationHealthStatus']==='PASS','ci_close':deploymentApplicationHealth['applicationHealthStatus']==='FAIL','ci_minus': deploymentApplicationHealth['applicationHealthStatus'] === undefined}">
             <i class="far" [ngClass]= "{'fa-check-circle':deploymentApplicationHealth['applicationHealthStatus']==='PASS','fa-times-circle':deploymentApplicationHealth['applicationHealthStatus']==='FAIL','fa-minus-circle': deploymentApplicationHealth['applicationHealthStatus'] === undefined}"></i></a>
           </button> -->
-        </span>
+        </div>
         <div class="app-status">
           <div class="pull-left" [ngClass]= "{'text-danger':deploymentApplicationHealth['applicationHealthStatus'] === 'FAIL','text-success':deploymentApplicationHealth['applicationHealthStatus'] === 'SUCCESS','text-warning':deploymentApplicationHealth['applicationHealthStatus'] === 'Review','text-muted':deploymentApplicationHealth['applicationHealthStatus'] === 'InProgress'}">{{deploymentApplicationHealth['applicationHealthStatus']}}</div>
           <div class="pull-right">{{calculateDiff(deploymentApplicationHealth['runStartTime'])}} </div>
@@ -84,11 +84,17 @@
   </div>
       <table class="table table-sm table-avenir table-no-bordered table-no-dots">
         <tbody>
+          <tr *ngIf="serviceListLength > 0">
+            <th >Service</th>
+            <th>Score</th>
+            <th>Status</th>
+          </tr>
           <ng-container *ngFor="let service of currentPage | filter:searchData; let i=index">
+          
           <tr [ngClass]="{'active-service': service.serviceId === selectedServiceId}">
-            <td class="service-selection" (click)="getService(service)">{{service.serviceName}}</td>
-            <td width="30" [ngClass]= "{'text-danger':service.status === 'Fail','text-success':service.status === 'Success','text-warning':service.status === 'Review','text-muted':service.status === 'InProgress'}">{{service.finalScore >= 0 ? (service.finalScore | number: '1.0-0') : 'N/A'}}</td>
-            <td width="30"  [ngClass]= "{'text-danger':service.status === 'Fail','text-success':service.status === 'Success','text-warning':service.status === 'Review','text-muted':service.status === 'InProgress'}">{{service.status}}</td>
+            <td class="service-selection " style="padding-left: 2px !important;" (click)="getService(service)">{{service.serviceName}}</td>
+            <td width="50" style="text-align: center;" [ngClass]= "{'text-danger':service.status === 'Fail','text-success':service.status === 'Success','text-warning':service.status === 'Review','text-muted':service.status === 'InProgress'}">{{service.finalScore >= 0 ? (service.finalScore | number: '1.0-0') : 'N/A'}}</td>
+            <td width="50" style="text-align: center;"  [ngClass]= "{'text-danger':service.status === 'Fail','text-success':service.status === 'Success','text-warning':service.status === 'Review','text-muted':service.status === 'InProgress'}">{{service.status}}</td>
           </tr> 
         </ng-container>               
         </tbody>
@@ -250,7 +256,7 @@
       <div class="row no-gutters">
         <div class="col-md-12 col-lg-12 col-xs-12 col-sm-12">
           <mat-drawer-container class="example-container" autosize>
-            <mat-drawer #sideNav class="example-sidenav" [position]="'end'" mode="side">
+            <mat-drawer #sideNav class="example-sidenav" [position]="'end'" mode="side" opened="true">
               <div class="rightBox m-0 position-sticky">
                 <div class="rightBox_header bg-white d-flex align-items-center">
                   <div class="btns_icon d-flex ml-auto">
@@ -260,67 +266,9 @@
                   </div>
                 </div>
                 <div class="rightBox_body pt-0">
-                  <div class="chart_ratio mb-3 text-center d-flex">
-                    <div class="chart_value flex-grow-1"  [ngClass]= "{'cv_high':serviceNameInfo['status'] === 'Success','cv_low':serviceNameInfo['status'] === 'Fail','cv_medium':serviceNameInfo['status'] === 'Review'}">
-                      <div class="cv_heighlight"  [ngClass]= "{'text-danger':serviceNameInfo['status'] === 'Fail','text-success':serviceNameInfo['status'] === 'Success','text-warning':serviceNameInfo['status'] === 'Review','text-muted':serviceNameInfo['status'] === 'InProgress'}">{{serviceNameInfo['status']}}</div>                      
-                      <div class="cv_name">Status  
-                      </div>
-                    </div>
-                    <div class="chart_value cv_alert flex-grow-1">
-                      <div class="cv_heighlight" 
-                      [ngClass]= "{'text-success':serviceNameInfo['metricScore'] >= deploymentApplicationHealth['maximumCanaryScore'],'text-danger':serviceNameInfo['metricScore'] < deploymentApplicationHealth['minimumCanaryScore'],'text-warning':serviceNameInfo['metricScore'] < deploymentApplicationHealth['minimumCanaryScore'] && serviceNameInfo['metricScore'] >= deploymentApplicationHealth['maximumCanaryScore'],'text-muted': serviceNameInfo['metricScore'] === 'N/A'}">{{ serviceNameInfo['metricScore'] >=0 ? (serviceNameInfo['metricScore'] | number: '1.0-0') : 'N/A'}}</div>
-                      <div class="cv_name">Metrics</div>
-                    </div>
-                    <div class="chart_value cv_alert flex-grow-1">
-                      <div class="cv_heighlight"   [ngClass]= "{'text-success':serviceNameInfo['logsScore'] >= deploymentApplicationHealth['maximumCanaryScore'],'text-danger':serviceNameInfo['logsScore'] < deploymentApplicationHealth['minimumCanaryScore'],'text-warning':(serviceNameInfo['logsScore'] < deploymentApplicationHealth['minimumCanaryScore']) && (serviceNameInfo['logsScore'] >= deploymentApplicationHealth['maximumCanaryScore']),'text-muted': serviceNameInfo['logsScore'] === 'N/A'}">{{serviceNameInfo['logsScore'] >= 0 ? (serviceNameInfo['logsScore'] | number: '1.0-0') : 'N/A'}}</div>
-                      <div class="cv_name">Logs</div>
-                    </div>
-                  </div>
-                  <div *ngIf="deploymentApplicationHealth['analysisType'] === 'Metrics Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'" class="chart_ratio mb-3 text-center d-flex">
-                    <div class="chart_value cv_low flex-grow-1">
-                      <div class="cv_heighlight">{{serviceNameInfo['metricsCount'] ? serviceNameInfo['metricsCount']['total']:''}}</div>
-                      <!-- /.cv_heighlight -->
-                      <div class="cv_name">Metrics</div>
-                      <!-- /.cv_name -->
-                    </div>
-                    <div class="chart_value cv_alert flex-grow-1">
-                      <div class="cv_heighlight text-danger">{{serviceNameInfo['metricsCount'] ? serviceNameInfo['metricsCount']['fail']:''}} </div>
-                      <!-- /.cv_heighlight -->
-                      <div class="cv_name">Failed</div>
-                    </div>
-                    <div class="chart_value cv_alert flex-grow-1">
-                      <div class="cv_heighlight text-warning">{{serviceNameInfo['metricsCount'] ? serviceNameInfo['metricsCount']['critical']:''}}</div>
-                      <!-- /.cv_heighlight -->
-                      <div class="cv_name">Critical</div>
-                    </div>
-                    <div class="chart_value cv_alert flex-grow-1">
-                      <div class="cv_heighlight">{{serviceNameInfo['metricsCount'] ? serviceNameInfo['metricsCount']['watchlist']:''}}</div>
-                      <!-- /.cv_heighlight -->
-                      <div class="cv_name">Watchlist</div>
-                    </div>
-                  </div>
-                  <div *ngIf="deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'" class="chart_ratio text-center d-flex">
-                    <div class="chart_value cv_low flex-grow-1">
-                      <div class="cv_heighlight">{{serviceNameInfo['clusterCount'] ? serviceNameInfo['clusterCount']['critical']:''}}</div>
-                      <!-- /.cv_heighlight -->
-                      <div class="cv_name">Critical</div>
-                    </div>
-                    <div class="chart_value flex-grow-1">
-                      <div class="cv_heighlight text-danger">{{serviceNameInfo['clusterCount'] ? serviceNameInfo['clusterCount']['error']:''}}</div>
-                      <!-- /.cv_heighlight -->
-                      <div class="cv_name">Error</div>
-                    </div>
-                    <div class="chart_value cv_alert flex-grow-1">
-                      <div class="cv_heighlight text-warning">{{serviceNameInfo['clusterCount'] ? serviceNameInfo['clusterCount']['warning']:''}}</div>
-                      <!-- /.cv_heighlight -->
-                      <div class="cv_name">Warning</div>
-                    </div>
-                    <div class="chart_value cv_alert flex-grow-1">
-                      <div class="cv_heighlight">{{serviceNameInfo['clusterCount'] ? serviceNameInfo['clusterCount']['total']:''}}</div>
-                      <!-- /.cv_heighlight -->
-                      <div class="cv_name">Cluster</div>
-                    </div>
-                  </div>
+                  
+                  
+                  
       
                   <div class="table-responsive">
                     <table class="table table-sm table-sm-text text-left table-no-bordered mb-0">
@@ -419,19 +367,81 @@
           
             <div class="example-sidenav-content">
               <div class="d-flex flex-column analysisMainDiv">
-                <div class="summaryToggleBtn">
-                  <button data-toggle="tooltip" data-placement="left" title="Overall canary run inforamtion for the selected application"  mat-button>
-                    <div *ngIf="isShow" (click)="[sideNav.toggle(),getOverallInfo()]"><i  class="fa fa-chevron-right"></i></div>
-                    <div *ngIf="!isShow" (click)="[sideNav.toggle(),getOverallInfo()]"><i  class="fa fa-chevron-left"></i></div>
-                  </button>
+                <div class="summaryToggleBtn d-flex ml20">
+                  <div class="chart_ratio mb-2 text-center d-flex   ">
+                    <div class="chart_value flex-grow-1 padding10LeftRight"  [ngClass]= "{'cv_high':serviceNameInfo['status'] === 'Success','cv_low':serviceNameInfo['status'] === 'Fail','cv_medium':serviceNameInfo['status'] === 'Review'}">
+                      <div class="cv_heighlight">{{serviceNameInfo['finalScore']}}</div>
+                      <div class="cv_heighlight"  [ngClass]= "{'text-danger':serviceNameInfo['status'] === 'Fail','text-success':serviceNameInfo['status'] === 'Success','text-warning':serviceNameInfo['status'] === 'Review','text-muted':serviceNameInfo['status'] === 'InProgress'}">{{serviceNameInfo['status']}}</div>                      
+                      
+                    </div>
+                    
+                  </div>
+                  <div *ngIf="deploymentApplicationHealth['analysisType'] === 'Metrics Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'" class="chart_ratio mb-2 text-center d-flex widthDetailScore ml20">
+                    <div class="chart_value cv_low flex-grow-1">
+                      <div class="cv_heighlight">{{serviceNameInfo['metricsCount'] ? serviceNameInfo['metricsCount']['total']:''}}</div>
+                      <!-- /.cv_heighlight -->
+                      <div class="cv_name">Metrics</div>
+                      <!-- /.cv_name -->
+                    </div>
+                    <div class="chart_value cv_alert flex-grow-1">
+                      <div class="cv_heighlight text-danger">{{serviceNameInfo['metricsCount'] ? serviceNameInfo['metricsCount']['fail']:''}} </div>
+                      <!-- /.cv_heighlight -->
+                      <div class="cv_name">Failed</div>
+                    </div>
+                    <div class="chart_value cv_alert flex-grow-1">
+                      <div class="cv_heighlight text-warning">{{serviceNameInfo['metricsCount'] ? serviceNameInfo['metricsCount']['critical']:''}}</div>
+                      <!-- /.cv_heighlight -->
+                      <div class="cv_name">Critical</div>
+                    </div>
+                    <div class="chart_value cv_alert flex-grow-1">
+                      <div class="cv_heighlight">{{serviceNameInfo['metricsCount'] ? serviceNameInfo['metricsCount']['watchlist']:''}}</div>
+                      <!-- /.cv_heighlight -->
+                      <div class="cv_name">Watchlist</div>
+                    </div>
+                  </div>
+                  <div *ngIf="deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'" class="chart_ratio mb-2 text-center d-flex widthDetailScore ml20" >
+                    <div class="chart_value padding5LeftRight  flex-grow-1" [ngClass]= "{'cv_high':serviceNameInfo['logsScore'] >= deploymentApplicationHealth['maximumCanaryScore'],'cv_low':serviceNameInfo['logsScore'] <= deploymentApplicationHealth['minimumCanaryScore'],'cv_medium':serviceNameInfo['logsScore'] < deploymentApplicationHealth['maximumCanaryScore'] && serviceNameInfo['logsScore'] > deploymentApplicationHealth['minimumCanaryScore']}">
+                      <div class="cv_heighlight" [ngClass]= "{'text-danger':serviceNameInfo['logsScore'] <= deploymentApplicationHealth['minimumCanaryScore'],'text-success':serviceNameInfo['logsScore'] >= deploymentApplicationHealth['maximumCanaryScore'],'text-warning':serviceNameInfo['logsScore'] < deploymentApplicationHealth['maximumCanaryScore'] && serviceNameInfo['logsScore'] > deploymentApplicationHealth['minimumCanaryScore']}" >{{serviceNameInfo['logsScore'] }}</div>
+                      <!-- /.cv_heighlight -->
+                      <div class="cv_name">Logs</div>
+                    </div>
+                    <div class="chart_value flex-grow-1">
+                      <div class="cv_heighlight text-danger">{{serviceNameInfo['clusterCount'] ? serviceNameInfo['clusterCount']['critical']:''}}</div>
+                      <!-- /.cv_heighlight -->
+                      <div class="cv_name">Critical</div>
+                    </div>
+                    <div class="chart_value flex-grow-1">
+                      <div class="cv_heighlight text-danger">{{serviceNameInfo['clusterCount'] ? serviceNameInfo['clusterCount']['error']:''}}</div>
+                      <!-- /.cv_heighlight -->
+                      <div class="cv_name">Error</div>
+                    </div>
+                    <div class="chart_value cv_alert flex-grow-1">
+                      <div class="cv_heighlight text-warning">{{serviceNameInfo['clusterCount'] ? serviceNameInfo['clusterCount']['warning']:''}}</div>
+                      <!-- /.cv_heighlight -->
+                      <div class="cv_name">Warning</div>
+                    </div>
+                    <div class="chart_value cv_alert flex-grow-1">
+                      <div class="cv_heighlight">{{serviceNameInfo['clusterCount'] ? serviceNameInfo['clusterCount']['total']:''}}</div>
+                      <!-- /.cv_heighlight -->
+                      <div class="cv_name">Cluster</div>
+                    </div>
+                  </div>
+
+                  
                 </div>
-                <div class="pt-1">
-                  <ul class="nav tab-lined nav-tabs" id="myTab" role="tablist" (click)="onClickTab($event)">
-                    <li class="nav-item" *ngIf="deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'">
+                <div class="pt-1 ">
+                  <ul class="nav tab-lined nav-tabs logAndMetricTabs" id="myTab" role="tablist" (click)="onClickTab($event)">
+                     <li class="nav-item" *ngIf="deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'">
                       <a class="nav-link" [ngClass]="{'active': deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'}"  id="log-analysis-tab" data-toggle="tab" role="tab" aria-controls="log-analysis" aria-selected="true">Log Analysis</a>
                     </li>
                     <li *ngIf="deploymentApplicationHealth['analysisType'] === 'Metrics Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'" class="nav-item">
                       <a class="nav-link" [ngClass]="{'active': deploymentApplicationHealth['analysisType'] === 'Metrics Only'}" id="metric-analysis-tab" data-toggle="tab" role="tab" aria-controls="metric-analysis" aria-selected="true">Metric Analysis</a>
+                    </li>
+                    <li class="nav-item ml-auto">
+                      <button class="pull-right" data-toggle="tooltip" data-placement="left" title="Overall canary run inforamtion for the selected application"  mat-button>
+                        <div *ngIf="isShow" (click)="[sideNav.toggle(),getOverallInfo()]"><i  class="fa fa-chevron-right"></i><i  class="fa fa-chevron-right"></i></div>
+                        <div *ngIf="!isShow" (click)="[sideNav.toggle(),getOverallInfo()]"><i  class="fa fa-chevron-left"></i><i  class="fa fa-chevron-left"></i></div>
+                      </button>
                     </li>
                    
                   </ul>
