--- a/src/app/application/deployment-verification/deployment-verification.component.less
+++ b/src/app/application/deployment-verification/deployment-verification.component.less
@@ -183,3 +183,60 @@ tbody{
 .app-status {
   padding:10px;
 }
+.appName
+{
+    display: flex;
+   
+    font-family: Avenir;
+}
+.inlineBlock
+{
+  display: inline-block;
+}
+.app-status
+{
+  width: 100%;
+  display: inline-block;
+  padding-left: 0px !important;
+  padding-bottom: 0px;
+}
+.logAndMetricTabs
+{
+  padding-right: 0px !important;
+}
+.paddingNone
+{
+  padding-left: 0px;
+  padding-right: 0px;
+}
+paddingLeftRight5
+{
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.ScoreWidth
+{
+  width: 120px;
+}
+.widthDetailScore
+{
+  width: 250px;
+}
+.ml20
+{
+  margin-left: 20px;
+}
+.widthDetailScoreLogs
+{
+  width: 300px;
+}
+.padding5LeftRight
+{
+  padding-left: 5px;
+  padding-right: 5px;;
+}
+.padding10LeftRight
+{
+  padding-left: 10px;
+  padding-right: 10px;;
+}
