--- a/src/app/application/deployment-verification/deployment-verification.component.less
+++ b/src/app/application/deployment-verification/deployment-verification.component.less
@@ -240,3 +240,21 @@ paddingLeftRight5
   padding-left: 10px;
   padding-right: 10px;;
 }
+.fa-stop {
+  color: #dc3545; 
+}
+.fa-spinner {
+  color: #009bfa;
+}
+.showElementHover {
+	cursor: pointer !important;
+}
+.ico16 {
+  font-size: 14px;
+}
+.fa-spin {
+  color: #009bfa;
+}
+.stop-icon {
+  padding: 3px;
+}
