--- a/src/app/application/deployment-verification/deployment-verification.component.html
+++ b/src/app/application/deployment-verification/deployment-verification.component.html
@@ -14,12 +14,12 @@
           </mat-form-field>
         </form>
     
-        <div class="appName"><b>{{selectedApplicationName}}</b>  
-          <!-- <button type="button" class="btn p-0" >
-            <a href="#" class="ml-2" [ngClass]= "{'ci_check':deploymentApplicationHealth['applicationHealthStatus']==='PASS','ci_close':deploymentApplicationHealth['applicationHealthStatus']==='FAIL','ci_minus': deploymentApplicationHealth['applicationHealthStatus'] === undefined}">
-            <i class="far" [ngClass]= "{'fa-check-circle':deploymentApplicationHealth['applicationHealthStatus']==='PASS','fa-times-circle':deploymentApplicationHealth['applicationHealthStatus']==='FAIL','fa-minus-circle': deploymentApplicationHealth['applicationHealthStatus'] === undefined}"></i></a>
-          </button> -->
-        </div>
+      
+          <div class="appName"><b>{{selectedApplicationName}}</b> &nbsp;&nbsp;  
+            <a *ngIf="deploymentApplicationHealth['applicationHealthStatus'] === 'InProgress'" class="ci_run ico16 popover-hover"><i class="fas fa-circle-notch fa-spin"></i></a> &nbsp;&nbsp;
+            <a *ngIf="deploymentApplicationHealth['applicationHealthStatus'] === 'InProgress'" data-toggle="tooltip" data-placement="top" title="Stop Running Canary"><i (click)="cancelRunningCanary(control.value)" class="fa fa-stop showElementHover stop-icon" aria-hidden="true"></i></a>
+          </div>
+     
         <div class="app-status">
           <div class="pull-left" [ngClass]= "{'text-danger':deploymentApplicationHealth['applicationHealthStatus'] === 'FAIL','text-success':deploymentApplicationHealth['applicationHealthStatus'] === 'SUCCESS','text-warning':deploymentApplicationHealth['applicationHealthStatus'] === 'Review','text-muted':deploymentApplicationHealth['applicationHealthStatus'] === 'InProgress'}">{{deploymentApplicationHealth['applicationHealthStatus']}}</div>
           <div class="pull-right">{{calculateDiff(deploymentApplicationHealth['runStartTime'])}} </div>
