--- a/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.html
+++ b/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.html
@@ -1,8 +1,131 @@
+  <div class="pt-1">
+    <ul class="nav tab-lined nav-tabs" id="myTab" role="tablist" (click)="onClickTab($event)">
+      <li class="nav-item" >
+        <a class="nav-link" id="metric-form-tab" data-toggle="tab" role="tab" aria-controls="metric-form" aria-selected="true">Form</a>
+      </li>
+      <li  class="nav-item">
+        <a class="nav-link"  id="metric-editor-tab" data-toggle="tab" role="tab" aria-controls="metric-editor" aria-selected="true">Editor</a>
+      </li>
+     
+    </ul>
+    
+    <div class="tab-content" id="myTabContent">
+      <div id="metric-form" role="tabpanel" aria-labelledby="metric-form-tab">         
+          <div *ngIf = "selectedTab === 'metric-form'" class="col-12 maindiv">
+            
+            <form [formGroup]="createMetricForm">              
+              <div id="step-1">
+                <div class="multisteps-form__content">
+                   <div class="px-4 py-3">
+                     <div class="row">
+                       <div class="col-6">
+                         <div class="form-group">
+                           <label>Metric Template Name</label>
+                           <input type="text" class="form-control" autofocus="true" formControlName="templateName"/>
+                         </div>
+                         <!-- /.form-group -->
+                       </div>
+                       <!-- /.col-6 -->
+                     </div>
+                     <!-- /.row -->
 
-  <div class="col-12 maindiv">
-    <json-editor [options]="editorOptions" [data]="data" (change)="showJson($event)"></json-editor>
-  </div>
-  <hr>
-  <div class="col-12">
-    <button class="btn btn-primary ml-2 savebtn" (click)="Submitmetricdata()">Save</button>
+                     <div class="text-divider">
+                       <h4>Data Source</h4>
+                     </div>
+                     
+                     <div class="row">
+                       <div class="col-6">
+                        <div class="form-group">
+                          <label>Select Datasource</label>
+                          <select class="form-control" (change)="onChangeDatasource($event.target.value)">
+                            <option value="" [disabled]="true">Select</option>
+                            <ng-container *ngFor="let datasource of autoDatasources">
+                            <ng-container *ngIf="datasource.usage[0] == 'metric'">
+                            <option *ngIf="datasource.metricTypes[0] == 'custom'" value="{{datasource.datasourceType}}" >
+                              {{datasource.displayName}}</option>
+                            </ng-container>
+                            </ng-container>
+                          </select>                          
+                        </div>
+                         <!-- /.form-group -->
+
+                         <div class="form-group">
+                          <label>Select {{selectedCustomDataSource}} Accounts</label>
+                          <select class="form-control" (change)="onChangeCustomDSAccount($event.target.value)">
+                            <option value="" [disabled]="true">Select</option>                            
+                            <option *ngFor="let dsaccount of customDataSourceAccounts" value="{{dsaccount}}" formControlName="accountName" >
+                              {{dsaccount}}</option>                           
+                          </select>                          
+                        </div>
+                         <!-- /.form-group -->
+
+                         <!-- <div class="form-group">
+                           <label>Select Newrelic Application</label>
+                           <select class="form-control">
+                             <option>canary-autopilot</option>
+                           </select>
+                         </div> -->
+                         <!-- /.form-group -->
+                       </div>
+                       <!-- /.col-6 -->
+                     </div>
+                     <!-- /.row -->
+
+
+                     <hr class="ml-0 mt-3 mb-3" />
+
+                     <div class="row">
+                       <div class="col-10">
+                         <div class="form-group">
+                           <label>API Selection</label>
+                           <table class="table table-outline">
+                             <thead>
+                               <tr>
+                                 <th>
+                                   <div class="custom-control custom-checkbox">
+                                     <input type="checkbox" class="custom-control-input" id="selectAll">
+                                     <label class="custom-control-label" for="selectAll">Select All</label>
+                                   </div>
+                                 </th>
+                               </tr>
+                             </thead>
+                             <tbody>
+                              
+                               <tr>
+                                 <td>
+                                   <div class="custom-control custom-checkbox">
+                                     <input type="checkbox" class="custom-control-input" checked id="selectItem7">
+                                     <label class="custom-control-label" for="selectItem7">/SpringController/logs/updateFeedbackLogTemplate (POST)</label>
+                                   </div>
+                                 </td>
+                               </tr>
+                             </tbody>
+                           </table>
+                         </div>
+                         <!-- /.form-group -->
+                       </div>
+                       <!-- /.col-6 -->
+                     </div>
+                     <!-- /.row -->                            
+                   </div>
+                 </div>
+              </div>
+            </form>
+            <div class="col-12">
+              <button class="btn btn-primary ml-2 savebtn" (click)="savemetrictemplate()">SaveForm</button>
+            </div>
+                        
+          </div>
+          
+      </div>
+      <div id="metric-editor" role="tabpanel" aria-labelledby="metric-editor-tab">          
+          <div class="col-12 maindiv" *ngIf = "selectedTab === 'metric-editor'">
+            <json-editor [options]="editorOptions" [data]="data" (change)="showJson($event)"></json-editor>
+            <div class="col-12">
+              <button class="btn btn-primary ml-2 savebtn" (click)="Submitmetricdata()">Save</button>
+            </div>
+           </div>            
+      </div>
+    </div>
+    
   </div>
