--- a/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.less
+++ b/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.less
@@ -5,3 +5,10 @@
     float: right;
     margin-bottom: 12px;
 }
+.mat-stepper-horizontal {
+    margin-top: 8px;
+  }
+  
+  .mat-form-field {
+    margin-top: 16px;
+  }
