--- a/src/app/application-onboarding/data-source/data-source-forms/data-source-forms.component.html
+++ b/src/app/application-onboarding/data-source/data-source-forms/data-source-forms.component.html
@@ -28,7 +28,9 @@
             </div>
             <div class="modal-footer">
                 <button type="submit" class="btn btn-default" type="reset" data-dismiss="modal" aria-label="Close">Cancel</button>
-                <button type="submit" class="btn btn-primary">Save</button>
+                <button type="submit" class="btn btn-primary">
+                    <span *ngIf="loading" class="spinner-border spinner-border-sm"></span><span *ngIf="!loading">Save</span>
+                </button>
             </div>
         </form>
         <div class="col-12" *ngIf="fromDataEmpty">
