--- a/src/app/application/application-dashboard/application-dashboard.component.less
+++ b/src/app/application/application-dashboard/application-dashboard.component.less
@@ -363,3 +363,12 @@
 .application-lastrun-review {
 	border-left-color: #ffc107;
 }
+.application-lastrun-empty {
+	border-left-color: #dee2e6;
+}
+.ico16 {
+	font-size: 14px;
+  }
+  .fa-spin {
+	color: #009bfa !important;
+  }
