showing no applications found message

--- a/src/app/application/application-dashboard/application-dashboard.component.less
+++ b/src/app/application/application-dashboard/application-dashboard.component.less
@@ -372,3 +372,8 @@
   .fa-spin {
 	color: #009bfa !important;
   }
+  .no-applications {
+	  padding: 20px;
+	  color: #999;
+	  font-size: 20px !important;
+  }
