--- a/src/app/application/application-dashboard/application-dashboard.component.html
+++ b/src/app/application/application-dashboard/application-dashboard.component.html
@@ -11,10 +11,19 @@
   <!-- /.page_title d-flex -->
 
   <div class="row no-gutters">
+    <div *ngIf="applicationFinalData.length === 0" class="col-md-12">
+      <div>
+        <div class="d-flex w-100 h-100">
+          <div class="no_content m-auto">
+           <p class="no-applications">No Applications.</p>
+            <p>Use application for continuous verification and production monitoring <br><small>(To create application, add at least 1 Cloud service and 1 Data source)</small></p>
+          </div>
+          <!-- /.no_content -->
+        </div>
+      </div>
+    </div>
     <div class="col-sm-8">
       <div class="data_listArea">
-        <!-- <app-network-chart></app-network-chart> -->
-        <!-- <app-cd-dashboard></app-cd-dashboard> -->
         <ng-container *ngFor="let application of applicationFinalData; let i=index">
           <div class="data_list" (click)="selectedApplication(i,application, finalLabelArray[i])"
             [ngClass]="{'active':application.applicationName === selectedApplicationName,'application-lastrun-inprogress':application.applicationStatus === 'RUNNING',
@@ -88,11 +97,6 @@
       <div class="rightBox position-sticky">
         <div class="rightBox_header d-flex align-items-center">
           <h3>{{selectedApplicationName}}</h3>
-          <!-- <div class="btns_icon d-flex ml-auto">
-                                  <button class="btn p-0"><img src="../../../assets/plus_icon.png" alt="plus" /></button>
-                                  <button class="btn p-0 ml-2"><img src="../../../assets/edit_icon.png" alt="edit" /></button>
-                                </div> -->
-          <!-- /.btns_icon -->
         </div>
         <!-- /.rightBox_header -->
         <div class="rightBox_body">
